--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "autoload": {
         "psr-4": {
-            "Adilis\\Hiddenobjects\\": "src/"
+            "Adilis\\HiddenObjects\\": "src/"
         }
     },
     "authors": [
